--- a/School-Managment-Frontend/src/main/web/src/app/document/upload-document/upload-document.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/document/upload-document/upload-document.component.html
@@ -1,10 +1,10 @@
 <p-dialog header="{{ 'upload-document' | translate }}" [(visible)]="displayDialog"
     showEffect="fade" [modal]="true" [style]="{width: '50vw'}">
-    <div class="p-grid ui-fluid" *ngIf="document">
-        <div class="ui-g-4">
+    <div class="p-grid p-fluid" *ngIf="document">
+        <div class="p-col-4">
             <label for="area">{{'area' | translate }}</label>
         </div>
-        <div class="ui-g-8">
+        <div class="p-col-8">
             <p-dropdown id="area" [options]="areas" [(ngModel)]="document.area"
                 placeholder="Choose" appendTo="body">
                 <ng-template pTemplate="item" let-item>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <p-footer>
-        <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <div class="p-dialog-buttonpane p-helper-clearfix">
             <button type="button" pButton icon="pi pi-check" (click)="close()"
                 label="{{ 'cancel' | translate }}"></button>
             <button type="button" pButton icon="pi pi-check" (click)="save()" label="{{ 'upload' | translate }}"></button>
