--- a/School-Managment-Frontend/src/main/web/src/styles.scss
+++ b/School-Managment-Frontend/src/main/web/src/styles.scss
@@ -1,7 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "~primeng/resources/themes/nova/theme.css";
-@import "~primeng/resources/primeng.min.css";
-@import "~primeicons/primeicons.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import './variables.scss';
+
+body { font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+    &, &:visited{
+        color: $secondary-color;
+    }
+
+    &:hover{
+        color: $secondary-color;
+    }
+
+    &.active-link, &:active{
+        color: $primary-color;
+    }
+}
+
+.p-menuitem-link-active{
+    background-color: rgba($secondary-color, .5);
+}
+
+.p-card.login-card{
+    background-color: rgba($secondary-color, .25);
+}
+
+.p-button{
+    background-color: $secondary-color;
+}
