--- a/School-Managment-Frontend/src/main/web/src/styles.scss
+++ b/School-Managment-Frontend/src/main/web/src/styles.scss
@@ -33,3 +33,13 @@ a {
 .p-button{
     background-color: $secondary-color;
 }
+
+
+.p-dialog{
+    width: 50vw;
+
+}
+
+.p-datatable tbody td {
+    border: 0 none;
+ }
